adding tags to playbook

--- a/install_apache1.yml
+++ b/install_apache1.yml
@@ -5,19 +5,10 @@
   tasks:
 
   - name: install apache2 and php packages
-    apt:
+    package:
       name: 
         - "{{ apache_package }}"
         - "{{ php_package }}"
       state: latest
       update_cache: yes
     when: ansible_distribution == "Ubuntu"
-
-  - name: install apache and php for CentOS servers
-     dnf:
-       name:
-         - httpd
-         - php
-       state: latest
-       update_cache: yes
-     when: ansible_distribution == "CentOS"
